--- a/.travis.yml
+++ b/.travis.yml
@@ -11,5 +11,7 @@ install:
   - pip install ansible==1.9.1
 
 script:
+# Building Docker image to run mypaas playbook
+- docker build -t "mypaas"
 # Role syntax
-- ansible-playbook -i "localhost," -c local main.yml --syntax-check
+#- ansible-playbook -i "localhost," -c local main.yml --syntax-check
