--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,11 @@
 language: python
 python: "2.7"
 
+sudo: required
+
+services:
+  - docker
+  
 before_install:
   - sudo apt-get update -qq
   - sudo apt-get install -qq python-apt
