--- a/.travis.yml
+++ b/.travis.yml
@@ -17,6 +17,6 @@ install:
 
 script:
 # Building Docker image to run mypaas playbook
-- docker build -t "mypaas"
+- docker build -t "mypaas" .
 # Role syntax
 #- ansible-playbook -i "localhost," -c local main.yml --syntax-check
